<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_review"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/keyline_small"
    android:animateLayoutChanges="true"
    android:background="@color/content_background"
    android:padding="@dimen/keyline_normal">

    <TextView
        android:id="@+id/tv_recommend_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_recommend"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/group_recommend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recommend_ask"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_answer_no"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_no"
            app:icon="@drawable/ic_very_dissatisfied"
            app:rippleColor="@color/colorSecondary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_answer_soso"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_so_so"
            app:icon="@drawable/ic_dissatisfied" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_answer_yes"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_yes"
            app:icon="@drawable/ic_very_satisfied" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/tv_error_recommend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/keyline_normal"
        android:text="@string/msg_req_recommend"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="@color/error_color"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_recommend"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_cost_effective"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_large"
        android:text="@string/question_cost_effective"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_recommend" />

    <RatingBar
        android:id="@+id/rating_cost_effective"
        style="@style/RatingBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_cost_effective"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_cost_effective"
        tools:rating="3" />

    <TextView
        android:id="@+id/tv_service_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_large"
        android:text="@string/question_service_point"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cost_effective" />

    <RatingBar
        android:id="@+id/rating_service_point"
        style="@style/RatingBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_service_point"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_service_point"
        tools:rating="3" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_waiting_time"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_large"
        android:hint="@string/question_waiting_time"
        app:errorEnabled="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_service_point"
        app:startIconDrawable="@drawable/ic_time">

        <AutoCompleteTextView
            android:id="@+id/waiting_time_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_eaten_food"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_small"
        android:hint="@string/question_eaten_food"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/layout_waiting_time"
        app:startIconDrawable="@drawable/ic_restaurant_menu">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_eaten_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_best_place"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_small"
        android:hint="@string/question_best_place"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/layout_eaten_food"
        app:startIconDrawable="@drawable/ic_best_place"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_best_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_review_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_small"
        android:hint="@string/question_review"
        app:counterEnabled="true"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/layout_best_place">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_write_review"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_normal"
        android:text="@string/action_write"
        app:icon="@drawable/ic_edit"
        app:layout_constraintTop_toBottomOf="@+id/layout_review_content" />

</androidx.constraintlayout.widget.ConstraintLayout>