<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/keyline_normal"
    android:layout_marginBottom="@dimen/keyline_normal"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cost_effective"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_cost_effective" />

        <ImageView
            android:id="@+id/iv_star_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_small"
            android:src="@drawable/ic_star"
            android:tint="@color/star_color" />

        <TextView
            android:id="@+id/tv_avg_cost_effective"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_mini"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="2.5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_service_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_service_point" />

        <ImageView
            android:id="@+id/iv_star_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_small"
            android:src="@drawable/ic_star"
            android:tint="@color/star_color"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_avg_service_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_mini"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="2.5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_waiting_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_waiting_time" />

        <TextView
            android:id="@+id/tv_avg_waiting_time"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/keyline_small"
            android:layout_weight="2"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            tools:text="@string/waiting_time_10" />

    </LinearLayout>
</LinearLayout>