<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/content_background"
        android:padding="@dimen/keyline_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout">

        <TextView
            android:id="@+id/tv_profile_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_profile_setting"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/iv_profile"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/iv_profile"
            android:layout_width="@dimen/profile_image_large"
            android:layout_height="@dimen/profile_image_large"
            android:background="?attr/actionBarItemBackground"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_account_circle"
            app:layout_constraintBottom_toTopOf="@id/layout_username"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="ContentDescription" />

        <View
            android:id="@+id/view_edit"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/shape_circle"
            app:layout_constraintBottom_toBottomOf="@id/iv_profile"
            app:layout_constraintRight_toRightOf="@id/iv_profile" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            android:tint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@id/view_edit"
            app:layout_constraintLeft_toLeftOf="@id/view_edit"
            app:layout_constraintRight_toRightOf="@id/view_edit"
            app:layout_constraintTop_toTopOf="@id/view_edit"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/keyline_large"
            android:hint="@string/hint_username"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_profile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/loading_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_get_started"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_large_height"
            android:text="@string/action_get_started"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>